main page html and css without js

--- a/src/front/scss/var.scss
+++ b/src/front/scss/var.scss
@@ -7,3 +7,8 @@
 
 $main-page-bg: rgb(26, 26, 26);
 $footer-copyright-sign: rgb(92, 92, 92);
+$text-color: rgb(255,255,255);
+$placeholder-color: #aaa;
+$hover-color: #ff0;
+$table-nav: #5c5c0d;
+$table-td: #ffffb5;
