--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -1,23 +1,250 @@
 .general {
     width: 100vw;
-    height: 100vh;
     background: $main-page-bg;
+    overflow: scroll;
+    min-height: 100vh;
 }
-
+.container {
+    width: 999px;
+    margin: 0 auto;
+}
+.nav-input-styles {
+    padding: 15px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    border: none;
+    background: transparent;
+    color: $text-color;
+}
+.panel-control-style {
+    padding: 0 30px;
+    font-size: 24px;
+    border: none;
+    background: transparent;
+    color: $text-color;  
+}
+.side-border {
+    border-left: 1px solid $text-color;
+}
 .header {
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 15%;
-    position: static;
-    border: 1px solid red;
+    height: 156px;
+    &__bar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__logo {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 320px;
+        height: 110px;
+        color: $text-color; 
+        &-icon {
+            color: #ccc;
+            width: 105px;
+            height: 105px;
+            border: 1px solid red;
+        }
+        &-logoname {
+            font-size: 39px;
+            letter-spacing: 2px;
+        }
+    }
+    &__nav {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 430px;
+        height: 110px;
+        &-language,
+        &-theme,
+        &-settings,
+        &-logout {
+            &:hover {
+                color: $hover-color;
+            }
+        }
+    }
+}
+.main {
+    width: 100%;
+    height: auto;
+    margin: 50px 0 100px 0;
+}
+.panel {
+    &__label {
+        display: flex;
+        flex-direction: column;
+        color: $text-color;
+        font-size: 26px;
+        margin: 0 0 10px;
+    }
+    &__inputs {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        color: $text-color;
+        &-age {
+            &::-webkit-outer-spin-button, 
+            &::-webkit-inner-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+        }
+    }
+    &__input {
+        width: 309px;
+        height: 61px;
+        margin: 10px 0 0;
+        padding: 25px;
+        color: $main-page-bg;
+        font-size: 26px;
+        &:focus {
+            outline: 1px solid $hover-color;
+        }
+    }
+    &__control {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 40px;
+        width: 570px;
+        height: 61px;
+        &-create, 
+        &-update,
+        &-delete,
+        &-clearAll {
+            &:hover {
+                color: $hover-color;
+            }
+        }
+    }
+}
+.table {
+    display: flex;
+    flex-direction: column;
+    width: 999px;
+    margin: 60px 0 0 0;
+    &__panel {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 20px 0;
+    }
+    &__nav {
+        display: flex;
+        justify-content: space-between;
+        color: $text-color;
+        font-size: 28px;
+        &-dms {     
+            display: flex;
+            justify-content: center;
+            align-items: center;   
+            width: 177px;
+            height: 65px;
+            background: $table-nav;
+        }
+        &-sort {
+            display: flex;
+            justify-content: center;
+            align-items: center;  
+            margin: 0 0 0 10px;
+            width: 133px;
+            height: 65px;
+            background: $table-nav;
+        }
+    }
+    &__search {
+        display: flex;
+        justify-content: space-between;
+        &-labelFN{
+            position: relative;
+            margin: 0 10px 0 0;
+            &::before {
+                content: '';
+                position: absolute;
+                left: -25px;
+                width: 64px;
+                height: 64px;
+                border-radius: 50%;
+                background: $hover-color;
+            }
+        }
+        &-firstName {
+            padding: 15px 15px 15px 45px;
+        }
+        &-lastName {
+            padding: 15px;
+        }
+    }
+    &__data {
+        display: block;
+        width: 999px;
+        min-height: 315px;
+        height: auto;
+        overflow-y: auto;
+        background: $text-color;
+    }
+    &__input {
+        width: 299px;
+        height: 65px;
+        font-size: 18px;
+        color: $main-page-bg;
+        &:focus {
+            outline: 1px solid $hover-color;
+        }
+    }
+}
+.thead {
+    width: 100%;
+    &__tr {
+        display: flex;
+        align-items: center;
+        &-th {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 142px;
+            height: 43px;
+            border: 1px solid $main-page-bg;
+            background: $text-color;
+            font-weight: 400;
+        }
+    }
+}
+.tbody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    &__tr {
+        display: flex;
+        align-items: center;
+        &-td {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 142px;
+            height: 43px;
+            border: 1px solid $main-page-bg;
+            background: $table-td;
+            font-weight: 400;
+            overflow-x: scroll;
+        }
+    }
 }
 .footer {
+    display: block;
     width: 100%;
-    height: 10%;
-    border: 1px solid red;
-    position: absolute;
+    height: 100px;
+    position: relative;
     bottom: 0;
+    font-size: 19px;
     &__copyrightSign {
-        width: 10%;
+        width: 15%;
         display: flex;
         justify-content: space-between;
         position: absolute;
