--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -15,6 +15,7 @@
     border: none;
     background: transparent;
     color: $text-color;
+    cursor: pointer;
 }
 .panel-control-style {
     padding: 0 30px;
@@ -43,6 +44,7 @@
         width: 320px;
         height: 110px;
         color: $text-color; 
+        cursor: pointer;
         &-icon {
             color: #ccc;
             width: 105px;
@@ -120,6 +122,7 @@
         &-update,
         &-delete,
         &-clearAll {
+            cursor: pointer;
             &:hover {
                 color: $hover-color;
             }
@@ -303,5 +306,127 @@
         left: 50%;
         transform: translate(-50%, -50%);
         color: $footer-copyright-sign;
+    }
+}
+
+.settingsPopup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: $main-page-bg;
+    top: 0;
+    left: 0;
+    visibility: visible;
+    transition: .4s ease;
+    &__container {
+        width: 590px;
+        height: 510px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 2px solid $table-nav;
+        background: $main-page-bg;
+    }
+    &__button {
+        &-close {
+            position: absolute;
+            top: 35px;
+            right: 25px;
+            width: 20px;
+            height: 20px;
+            background: none;
+            border: none;
+            transition: .3s ease;
+            cursor: pointer;
+            transform: translate(0, -50%) rotate(45deg);
+            &::before {
+                content: '';
+                width: 100%;
+                height: 3px;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                margin-top: -2px;
+                background: $table-nav;
+            }
+            &::after {
+                content: '';
+                width: 3px;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                margin-left: -2px;
+                background: $table-nav;
+            }
+        }
+    }
+    &__header {
+        width: 100%;
+        text-align: center;
+        color: $text-color;
+        font-size: 55px;
+        padding: 50px 0;
+        cursor: default;
+    }
+    &__group {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 auto;
+        &-newPassword,
+        &-repeatPassword {
+            margin-top: 10px;
+        }
+    }
+    &__buttons {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        padding: 40px 0 35px;
+        &-confirm,
+        &-cancel {
+            width: 200px;
+            height: 60px;
+            text-align: center;
+            background: $table-nav;
+            transition: .3s ease;
+            color: $text-color;
+            cursor: pointer;
+            &:hover,
+            &:hover {
+                background: $hover-color;
+                color: $main-page-bg;
+            }
+        }
+    }
+    &__input {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 25px;
+        width: 420px;
+        height: 66px;
+        font-size: 24px;
+        // &::before {
+        //     content: ();
+        //     position: absolute;
+        //     top: 50%;
+        //     right: 5px;
+        //     width: 5px;
+        //     height: 5px;
+        //     background: red;
+        // }
+    }
+    &.hideSettingsPopup {
+        display: block;
+        opacity: 0;
+        visibility: hidden;
+        animation: none;
     }
 }
