--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -308,12 +308,12 @@
         color: $footer-copyright-sign;
     }
 }
-
+/* SETTINGS POPUP */
 .settingsPopup {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: $main-page-bg;
+    background-color: $modal-bg;
     top: 0;
     left: 0;
     visibility: visible;
@@ -327,6 +327,7 @@
         transform: translate(-50%, -50%);
         border: 2px solid $table-nav;
         background: $main-page-bg;
+        opacity: 1;
     }
     &__button {
         &-close {
@@ -397,6 +398,7 @@
             transition: .3s ease;
             color: $text-color;
             cursor: pointer;
+            font-size: 24px;
             &:hover,
             &:hover {
                 background: $hover-color;
@@ -411,7 +413,7 @@
         justify-content: space-between;
         padding: 25px;
         width: 420px;
-        height: 66px;
+        height: 65px;
         font-size: 24px;
         // &::before {
         //     content: ();
@@ -424,6 +426,219 @@
         // }
     }
     &.hideSettingsPopup {
+        display: block;
+        opacity: 0;
+        visibility: hidden;
+        animation: none;
+    }
+}
+/* CREATE POPUP */
+.createPopup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: $modal-bg;
+    top: 0;
+    left: 0;
+    visibility: visible;
+    transition: transform .4s ease;
+    &__container {
+        width: 584px;
+        height: 784px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 2px solid $table-nav;
+        background: $main-page-bg;
+        opacity: 1;
+    }
+    &__button {
+        &-close {
+            position: absolute;
+            top: 35px;
+            right: 25px;
+            width: 20px;
+            height: 20px;
+            background: none;
+            border: none;
+            transition: .3s ease;
+            cursor: pointer;
+            transform: translate(0, -50%) rotate(45deg);
+            &::before {
+                content: '';
+                width: 100%;
+                height: 3px;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                margin-top: -2px;
+                background: $table-nav;
+            }
+            &::after {
+                content: '';
+                width: 3px;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                margin-left: -2px;
+                background: $table-nav;
+            }
+        }
+    }
+    &__header {
+        width: 100%;
+        text-align: center;
+        color: $text-color;
+        font-size: 55px;
+        padding: 35px 0;
+        cursor: default;
+    }
+    &__group {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 auto;
+        // &-newPassword,
+        // &-repeatPassword {
+        //     margin-top: 10px;
+        // }
+    }
+    &__buttons {
+        margin: 0 auto;
+        width: 420px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 25px 0 40px;
+        &-confirm,
+        &-cancel {
+            width: 200px;
+            height: 60px;
+            text-align: center;
+            background: $table-nav;
+            transition: .3s ease;
+            color: $text-color;
+            cursor: pointer;
+            font-size: 24px;
+            &:hover,
+            &:hover {
+                background: $hover-color;
+                color: $main-page-bg;
+            }
+        }
+    }
+    &__input {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 25px;
+        width: 420px;
+        height: 65px;
+        font-size: 24px;
+        margin-top: 10px;
+    }
+    &.hideCreatePopup {
+        display: block;
+        opacity: 0;
+        visibility: hidden;
+        animation: none;
+    }
+}
+/*  POPUP */
+.clearAllPopup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: $modal-bg;
+    top: 0;
+    left: 0;
+    visibility: visible;
+    transition: transform .4s ease;
+    &__container {
+        width: 600px; 
+        height: auto; 
+        position: absolute; 
+        top: 50%; 
+        left: 50%; 
+        transform: translate(-50%, -50%); 
+        border: 2px solid $table-nav; 
+        background: $main-page-bg; 
+        opacity: 1;
+        line-height: 1.5;
+    }
+    &__button {
+        &-close {
+            position: absolute;
+            top: 35px;
+            right: 25px;
+            width: 20px;
+            height: 20px;
+            background: none;
+            border: none;
+            transition: .3s ease;
+            cursor: pointer;
+            transform: translate(0, -50%) rotate(45deg);
+            &::before {
+                content: '';
+                width: 100%;
+                height: 3px;
+                position: absolute;
+                top: 50%;
+                left: 0;
+                margin-top: -2px;
+                background: $table-nav;
+            }
+            &::after {
+                content: '';
+                width: 3px;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                margin-left: -2px;
+                background: $table-nav;
+            }
+        }
+    }
+    &__header {
+    margin: 35px auto 15px;
+    width: 70%;
+    text-align: center;
+    color: white;
+    font-size: 35px;
+    cursor: default;
+    word-break: break-word;
+    }
+    &__buttons {
+        margin: 45px auto 40px; 
+        width: 420px; 
+        display: flex; 
+        flex-direction: row; 
+        justify-content: space-between; 
+        align-items: center;
+        &-confirm,
+        &-cancel {
+            width: 200px;
+            height: 60px;
+            text-align: center;
+            background: $table-nav;
+            transition: .3s ease;
+            color: $text-color;
+            cursor: pointer;
+            font-size: 24px;
+            &:hover,
+            &:hover {
+                background: $hover-color;
+                color: $main-page-bg;
+            }
+        }
+    }
+    &.hideClearAllPopup {
         display: block;
         opacity: 0;
         visibility: hidden;
