--- a/src/front/scss/req.scss
+++ b/src/front/scss/req.scss
@@ -1,3 +1,113 @@
+.wrapper{
+    background: $main-page-bg;
+}
+.container{
+    width: 999px;
+    margin: 0 auto;
+}
+.header{
+    padding-top: 30px;
+    &__text-content{
+        text-transform: uppercase;
+        font-size: $fontLogo;
+    }
+    &__text-content{
+        color: $whiteTextColor;
+    }
+    &__wrap{
+        display: flex;
+        justify-content: space-between;
+    }
+    &__regLogo{
+        display: flex;
+        align-items: center;
+        
+    }
+    &__regLogo-img{
+        padding: 30px 25px 0 0;
+    }
+}
 
+.main__wrap{
+    display: flex;
+    justify-content: space-between;
+    border-left: 15px solid $whiteTextColor;
+}
 
+.textContent{
+    &__title{
+        margin-bottom: 100px;
+    }
+    &__infoFirstPart{
+        width: 320px;
+        @include styleLargeText;
+        color: $whiteTextColor;
+        margin-bottom: 25px;
+        padding-left: 55px;
+    }
+    &__infoSecondPart{
+        @include styleLargeText;
+        color:$yellowTextColor;
+        padding-left: 55px;
+    }
+    &__typeDB{
+        @include styleMiddleText;
+        padding:0 0 10px 55px;
+    }
+    &__kindDB{
+        @include stylSmallText;
+        padding:0 0 10px 90px;
+    }
+}
+.formTitle{
+    @include formLoginText;
+    text-transform: uppercase;
+}
+.formField{
+    width: 435px;
+    height: 80px;
+    margin-bottom: 30px;
+}
+
+::placeholder { 
+    padding: 30px 30px;
+    text-transform: uppercase;
+    font-size: 20px;
+    color:#a4a4a4;
+   }
+.formsContent{
+    &__button{
+    width: 435px;
+    height: 80px;
+    background-color:$yellowTextColor;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 20px;
+    }
+    &__wrapLink{
+        float: right;
+    }
+    &__link{
+        color:$whiteTextColor;
+        }
+}
+
+.footer{
+    &__container{
+    display: flex;
+    justify-content: flex-end;
+  }
+    &__wrap{
+    display: flex;
+    }
+    &__info{
+        margin-right: 200px;
+        padding-top: 20px;
+        color: #a4a4a4;
+    }
+    &__logo{
+        height: 40px;
+    }
+}
 
