--- a/src/front/scss/req.scss
+++ b/src/front/scss/req.scss
@@ -67,12 +67,15 @@
     width: 435px;
     height: 80px;
     margin-bottom: 30px;
+    font-size: 26px;
 }
 
+input {
+    outline:none;
+}
 ::placeholder { 
     padding: 30px 30px;
-    text-transform: uppercase;
-    font-size: 20px;
+    font-size: 24px;
     color:#a4a4a4;
    }
 .formsContent{
@@ -105,9 +108,7 @@
         margin-right: 200px;
         padding-top: 20px;
         color: #a4a4a4;
-    }
-    &__logo{
-        height: 40px;
-    }
+    }  
 }
+
 
