--- a/src/front/scss/var.scss
+++ b/src/front/scss/var.scss
@@ -16,9 +16,11 @@ $d-table-td: #ffffb5;
 $d-modal-bg: rgba(26, 26, 26, 0.9);
 $d-clearAll: rgb(255, 0, 0);
 
-
-$l-main-page-bg: rgb(255, 253, 253);
-$l-header-bg: #ccc;
+$l-main-page-bg: rgb(255, 255, 235);
+$l-header-bg: #ffb179;
 $l-footer-copyright-sign: rgb(92, 92, 92);
 $l-text-color: #333;
-$l-modal-bg: rgba(26, 26, 26, 0.9);
+$l-modal-bg: rgba(255, 253, 225, 0.9);
+$l-table-nav: #8a8a08;
+$l-hover-color: rgb(255, 208, 0);
+$l-clearAll: rgb(255, 80, 80);
