--- a/src/front/scss/var.scss
+++ b/src/front/scss/var.scss
@@ -5,6 +5,11 @@
     font-family: sans-serif;
 }
 
+.container {
+    width: 999px;
+    margin: 0 auto;
+}
+
 $d-main-page-bg: rgb(26, 26, 26);
 $d-border-color: rgb(26, 26, 26);
 $d-footer-copyright-sign: rgb(92, 92, 92);
