implemented sort data on main page

--- a/src/front/scss/var.scss
+++ b/src/front/scss/var.scss
@@ -28,4 +28,5 @@ $l-text-color: #333;
 $l-modal-bg: rgba(255, 253, 225, 0.9);
 $l-table-nav: #8a8a08;
 $l-hover-color: rgb(255, 208, 0);
+$l-header-hover-color: rgb(255, 246, 206);
 $l-clearAll: rgb(255, 80, 80);
