--- a/src/front/scss/main.scss
+++ b/src/front/scss/main.scss
@@ -15,7 +15,6 @@
     cursor: pointer;
 }
 .panel-control-style {
-    // padding: 0 30px;
     font-size: 24px;
     border: none;
     background: transparent;
@@ -51,6 +50,9 @@
         }
     }
     &__td {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 142px;
         height: 43px;
         border: 1px solid #1a1a1a;
@@ -58,7 +60,7 @@
         font-weight: 400;
         overflow: auto;
         text-align: center;
-        padding: 12px 7px;
+        // padding: 12px 7px;
         &:nth-child(3) {
             width: 84px;
         }
@@ -270,7 +272,7 @@
         position: absolute;
         top:100%;
         left: 10px;
-        width: 133px;
+        width: 180px;
         height: auto;
         border-top-left-radius: 5%;
         border-top-right-radius: 5%;
@@ -297,13 +299,15 @@
             justify-content: center;
             align-items: center;  
             margin: 0 0 0 10px;
-            width: auto;
+            // width: auto;
+            width: 180px;
             padding: 0 20px;
             height: 65px;
             background: $d-table-nav;
             font-size: 28px;
             color: $d-text-color;
             text-decoration: none;
+            text-align: center;
             border-radius: 10px;
         }
         &-hover {
@@ -311,6 +315,7 @@
             color: $d-text-color;
             text-decoration: none;
             padding: 10px 15px;
+            cursor: pointer;
             &:hover {
                 color: $d-hover-color;
                 text-decoration: underline;
@@ -356,7 +361,7 @@
         width: 999px;
         min-height: 315px;
         height: auto;
-        overflow-y: auto;
+        // overflow-y: auto;
         background: $d-text-color;
         border: 1px solid $d-border-color;
     }
@@ -669,7 +674,7 @@
         &__nav {
             &-language {
                 &:hover {
-                    color: $l-hover-color;
+                    color: $l-header-hover-color;
                 }
                 &:focus {
                     outline: none;
@@ -677,7 +682,7 @@
             }
             &-theme {
                 &:hover {
-                    color: $l-hover-color;
+                    color: $l-header-hover-color;
                 }
                 &:focus {
                     outline: none;
