--- a/src/front/scss/var.scss
+++ b/src/front/scss/var.scss
@@ -19,14 +19,14 @@ $d-hover-color: #ff0;
 $d-table-nav: #5c5c0d;
 $d-table-td: #ffffb5;
 $d-modal-bg: rgba(26, 26, 26, 0.9);
-$d-clearAll: rgb(255, 0, 0);
+$d-clearAll: rgb(182, 1, 1);
 
 $l-main-page-bg: rgb(255, 255, 235);
 $l-header-bg: #ffb179;
 $l-footer-copyright-sign: rgb(92, 92, 92);
 $l-text-color: #333;
 $l-modal-bg: rgba(255, 253, 225, 0.9);
-$l-table-nav: #8a8a08;
+$l-table-nav: #e09a68;
 $l-hover-color: rgb(255, 208, 0);
 $l-header-hover-color: rgb(255, 246, 206);
-$l-clearAll: rgb(255, 80, 80);
+$l-clearAll: rgb(221, 72, 72);
